[package]
name = "checksum"
version = "0.1.0"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]

[lib]
crate-type = ["dylib"]

[dependencies]
crypto-hash = "0.3.4"
once_cell    = "= 1.8.0"
quote        = "= 1.0.9"
proc-macro2  = "= 1.0.26"
serde        = "= 1.0.37"
serde_derive = "= 1.0.37"
openssl      = "= 0.10.41"
sandstorm = { path = "../../sandstorm" }
